# Boris_Bilogur_Fall22

./: .gitignore  .gitmodules  CMakeLists.txt  GameEnginesFall22.sln  README.md  Unique.txt
GameEnginesFall22/: CMakeLists.txt  Fall22.cpp  Fall22.h  GameEnginesFall22.vcxproj  GameEnginesFall22.vcxproj.filters
GameEnginesFall22/Assets/Shaders/: defaultNotUnityFragment2.glsl  defaultNotUnityVertex2.glsl
NotUnity/: CMakeLists.txt  Event.cpp  Event.h  Keys.h  NotUnity.h  NotUnity.vcxproj  NotUnity.vcxproj.filters  NotUnityApp.cpp  NotUnityApp.h  NotUnityUtil.h  NotUnityWindow.cpp  NotUnityWindow.h  Picture.cpp  Picture.h  PictureImplementation.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Unit.cpp  Unit.h  WindowImplementation.h
NotUnity/GLFWcode/: GLFWimplementation.cpp  GLFWimplementation.h
NotUnity/OpenGLcode/: OpenGLPicture.cpp  OpenGLPicture.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h
glad/: glad.vcxproj
glad/include/glad/: glad.h
glad/src/: glad.c
stbi/: stbi.vcxproj
